
 OpenSSL CHANGES
 _______________

 This is a high-level summary of the most important changes.
 For a full list of changes, see the git commit log; for example,
 https://github.com/openssl/openssl/commits/ and pick the appropriate
 release branch.

 Changes between 1.1.1 and 3.0.0 [xx XXX xxxx]

  *) Added functionality to create an EVP_PKEY from user data.  This
     is effectively the same as creating a RSA, DH or DSA object and
     then assigning them to an EVP_PKEY, but directly using algorithm
     agnostic EVP functions.  A benefit is that this should be future
     proof for public key algorithms to come.
     [Richard Levitte]

  *) Change the interpretation of the '--api' configuration option to
     mean that this is a desired API compatibility level with no
     further meaning.  The previous interpretation, that this would
     also mean to remove all deprecated symbols up to and including
     the given version, no requires that 'no-deprecated' is also used
     in the configuration.

     When building applications, the desired API compatibility level
     can be set with the OPENSSL_API_COMPAT macro like before.  For
     API compatibility version below 3.0, the old style numerical
     value is valid as before, such as -DOPENSSL_API_COMPAT=0x10100000L.
     For version 3.0 and on, the value is expected to be the decimal
     value calculated from the major and minor version like this:

         MAJOR * 10000 + MINOR * 100

     Examples:

         -DOPENSSL_API_COMPAT=30000             For 3.0
         -DOPENSSL_API_COMPAT=30200             For 3.2

     To hide declarations that are deprecated up to and including the
     given API compatibility level, -DOPENSSL_NO_DEPRECATED must be
     given when building the application as well.
     [Richard Levitte]

  *) Added the X509_LOOKUP_METHOD called X509_LOOKUP_store, to allow
     access to certificate and CRL stores via URIs and OSSL_STORE
     loaders.

     This adds the following functions:
